Need to fix the bullet alignment in epigraphs

--- a/inc/learninggo.css
+++ b/inc/learninggo.css
@@ -87,6 +87,10 @@ blockquote.epigraph {
     width: 50%;
 }
 
+.epigraph > ul {
+    text-align: right;
+}
+
 .epigraph footer span.quote-who {
     font-style: normal;
     font-variant: small-caps;
